<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.snomed.otf</groupId>
	<artifactId>snomed-subontology-extraction</artifactId>
	<version>2.2.0-SNAPSHOT</version>

	<properties>
		<java.version>17</java.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencies>
		<!-- RF2 Loading -->
		<dependency>
			<groupId>org.snomed.otf</groupId>
			<artifactId>snomed-boot</artifactId>
			<version>5.4.0-SNAPSHOT</version>
		</dependency>

		<!-- SNOMED OWL API -->
		<!-- Brings in standard sourceforge owlapi and also elk-owlapi as transitive dependencies -->
		<dependency>
			<groupId>org.snomed.otf</groupId>
			<artifactId>snomed-owl-toolkit</artifactId>
			<version>5.5.0</version>
		</dependency>

		<!-- Logging -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>2.0.7</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>2.0.9</version>
		</dependency>

		<!-- Testing -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>5.10.0</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-antrun-plugin</artifactId>
				<version>3.1.0</version>
				<executions>
					<execution>
						<id>zip-resources-folder</id>
						<phase>generate-resources</phase>
						<configuration>
							<target>
								<!-- Zip src/main/resources/xx into target/generated-resources/xx.zip -->
								<zip destfile="${project.build.directory}/generated-resources/SnomedCT_TestSubonologyModule.zip"
									 basedir="src/main/resources/SnomedCT_TestSubonologyModule" />
							</target>
						</configuration>
						<goals>
							<goal>run</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>3.3.1</version>
				<executions>
					<execution>
						<id>copy-zipped-resources</id>
						<phase>process-resources</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.outputDirectory}</outputDirectory>
							<resources>
								<resource>
									<directory>${project.build.directory}/generated-resources</directory>
									<includes>
										<include>SnomedCT_TestSubonologyModule.zip</include>
									</includes>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.1.2</version>
				<configuration>
					<argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
					<excludes>
						<exclude>org.snomed.ontology.extraction.manualtests.*</exclude>
					</excludes>
				</configuration>
			</plugin>
			<!-- Create Executable Application Archive -->
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<version>3.1.5</version>
				<executions>
					<execution>
						<goals>
							<goal>repackage</goal>
						</goals>
						<configuration>
							<classifier>executable</classifier>
							<mainClass>org.snomed.ontology.extraction.SubontologyExtraction</mainClass>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<repository>
			<id>ihtsdo-releases</id>
			<releases><enabled>true</enabled></releases>
			<snapshots><enabled>false</enabled></snapshots>
			<url>https://nexus3.ihtsdotools.org/repository/maven-releases/</url>
		</repository>
		<repository>
			<id>ihtsdo-snapshots</id>
			<releases><enabled>false</enabled></releases>
			<snapshots><enabled>true</enabled></snapshots>
			<url>https://nexus3.ihtsdotools.org/repository/maven-snapshots/</url>
		</repository>
		<repository>
			<id>jcenter-snapshots</id>
			<name>jcenter</name>
			<url>https://jcenter.bintray.com/</url>
		</repository>
	</repositories>

	<distributionManagement>
		<repository>
			<id>ihtsdo-public-nexus</id>
			<name>IHTSDO Public Nexus Releases</name>
			<url>https://maven.ihtsdotools.org/content/repositories/releases/</url>
		</repository>
		<snapshotRepository>
			<id>ihtsdo-public-nexus</id>
			<name>IHTSDO Public Nexus Snapshots</name>
			<url>https://maven.ihtsdotools.org/content/repositories/snapshots/</url>
		</snapshotRepository>
	</distributionManagement>

</project>
